k8s/vuejs/vuejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vuejs
  name: vuejs-svc
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 80
      name: vuejs
  selector:
    app: vuejs
  type: ClusterIP
