k8s/vuejs/vuejs-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vuejs-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "blood-donors.ddns.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vuejs-svc
            port:
              name: vuejs
  tls:
  - hosts:
    - blood-donors.ddns.net
    secretName: spring-production-certificate
